--- a/index.html
+++ b/index.html
@@ -43,15 +43,16 @@
     // --- 重新設計的 20 關地圖 ---
     const ALL_LEVELS = [
         { m: [[2,0],[1,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, // 1
-        { m: [
-            [0, 0, 2], // 第二關：拔掉了左上和右邊的箱子
-            [0, 0, 0], 
-            [1, 0, 0]  // 僅保留左下角一個箱子作為轉向點
-        ], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, 
+        { m: [[0, 0, 2],[0, 0, 0],[1, 0, 0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, // 2
         { m: [[2,0,0],[1,1,0],[0,0,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, // 3
         { m: [[0,0,0,0],[0,1,1,0],[0,1,2,0],[0,0,0,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, // 4
         { m: [[2,0,1,1],[1,0,0,1],[1,1,0,0],[1,1,1,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, // 5
-        { m: [[1,0,0,0],[0,2,0,1],[0,0,0,0],[1,0,1,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} }, // 6
+        { m: [
+            [0, 0, 0, 0], // 第 6 關：已移除左上角方塊
+            [0, 2, 0, 1], 
+            [0, 0, 1, 0], 
+            [0, 0, 0, 0]  // 已移除右下角方塊
+        ], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} }, 
         { m: [[0,0,0,0],[1,1,1,0],[2,0,0,0],[0,1,1,1]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} }, // 7
         { m: [[0,0,1,0],[1,0,0,0],[0,0,2,0],[0,1,0,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} }, // 8
         { m: [[2,0,0,0,0],[1,1,1,1,0],[0,0,0,0,0],[0,1,1,1,1],[0,0,0,0,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} }, // 9
@@ -72,7 +73,7 @@
         const name = document.getElementById('username-input').value.trim();
         if(!name) return;
         currentUser = name;
-        const saved = JSON.parse(localStorage.getItem('lc_final_v11_'+name)) || {lvl:1};
+        const saved = JSON.parse(localStorage.getItem('lc_final_v12_'+name)) || {lvl:1};
         currentLvl = Math.min(saved.lvl, 20);
         document.getElementById('login-modal').style.display = 'none';
         document.getElementById('display-name').innerText = name;
@@ -140,9 +141,9 @@
             setTimeout(() => {
                 if(currentLvl < 20) {
                     currentLvl++;
-                    localStorage.setItem('lc_final_v11_'+currentUser, JSON.stringify({lvl:currentLvl}));
+                    localStorage.setItem('lc_final_v12_'+currentUser, JSON.stringify({lvl:currentLvl}));
                     initLevel();
-                } else alert("傳奇！你完成了所有 20 關！");
+                } else alert("完美通關！");
             }, 200);
         }
     }
