--- a/index.html
+++ b/index.html
@@ -2,77 +2,87 @@
 <html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
-<title>Longcat Ultimate Edition</title>
+<title>Longcat PRO Edition</title>
 
 <style>
 body{
+margin:0;
+background:#f7f1e3;
+font-family:"Microsoft JhengHei";
 display:flex;
 flex-direction:column;
 align-items:center;
-background:#f7f1e3;
-font-family:"Microsoft JhengHei";
-margin:0;padding:20px;
 }
-.ui{background:#fff;padding:15px 25px;border-radius:15px;
-box-shadow:0 6px 12px rgba(0,0,0,.1);margin-bottom:15px}
+
 canvas{
-background:#fff;border-radius:15px;
-box-shadow:0 0 20px rgba(0,0,0,.15)}
-button{
-padding:10px 20px;border:none;border-radius:10px;
-background:#ff7675;color:#fff;font-weight:bold;cursor:pointer}
+background:#fff;
+margin-top:15px;
+border-radius:14px;
+box-shadow:0 10px 25px rgba(0,0,0,.15);
+touch-action:none;
+}
+
+.panel{
+background:#fff;
+padding:12px 20px;
+margin-top:15px;
+border-radius:12px;
+box-shadow:0 5px 10px rgba(0,0,0,.1);
+}
 </style>
 </head>
 
 <body>
 
-<div class="ui">
-<h2 id="player">Player</h2>
-關卡 <span id="lvl">1</span>/20　
-(Z 可復原一步)
+<div class="panel">
+關卡 <span id="lvl">1</span>
+｜
+星級：<span id="stars">⭐⭐⭐</span>
+｜
+Z復原 ｜ E編輯器
 </div>
 
 <canvas id="game"></canvas>
 
-<div style="margin-top:10px">
-<button onclick="reset()">重玩</button>
-</div>
-
 <script>
+//////////////////////////////////////////////////
+// 基本設定
+//////////////////////////////////////////////////
+
 const canvas=document.getElementById("game");
 const ctx=canvas.getContext("2d");
 
-let grid=[],catPath=[],history=[];
-let lvl=1,TILE=60;
+let TILE=70;
+let grid=[],catPath=[];
+let level=1;
+let history=[];
+let moveCount=0;
+let editorMode=false;
 
 //////////////////////////////////////////////////
-// ⭐ 重設後的關卡（重新平衡）
+// 音效系統
+//////////////////////////////////////////////////
+
+const audioCtx=new (window.AudioContext||window.webkitAudioContext)();
+
+function beep(freq,time){
+let o=audioCtx.createOscillator();
+let g=audioCtx.createGain();
+o.connect(g); g.connect(audioCtx.destination);
+o.frequency.value=freq;
+o.start();
+g.gain.exponentialRampToValueAtTime(.0001,audioCtx.currentTime+time);
+o.stop(audioCtx.currentTime+time);
+}
+
+//////////////////////////////////////////////////
+// 關卡
 //////////////////////////////////////////////////
 
 const LEVELS=[
-{m:[[2,0],[1,0]]},
-{m:[[2,0,0],[0,1,0],[0,0,0]]},
-{m:[[0,0,2],[1,1,0],[0,0,0]]},
-{m:[[0,0,0,0],[0,1,1,0],[0,0,2,0],[0,0,0,0]]},
-{m:[[2,0,1,1],[0,0,0,1],[1,1,0,0],[1,1,1,0]]},
-
-{m:[[0,0,1,0],[0,2,0,0],[0,1,1,0],[0,0,0,0]]},
-{m:[[0,0,0,0],[1,1,1,0],[2,0,0,0],[0,1,1,1]]},
-{m:[[0,1,0,0],[0,0,0,1],[1,0,2,0],[0,0,1,0]]},
-{m:[[2,0,0,0,0],[1,1,1,1,0],[0,0,0,0,0],[0,1,1,1,1]]},
-{m:[[0,0,1,0,0],[0,2,0,0,0],[1,0,1,0,1],[0,0,0,0,0]]},
-
-{m:[[1,0,0,0,1],[0,0,2,0,0],[0,1,1,1,0],[0,0,0,0,0]]},
-{m:[[2,0,0,0,0,0],[1,1,1,1,1,0],[0,0,0,0,0,0],[0,1,1,1,1,1]]},
-{m:[[0,1,0,0,0],[0,0,0,1,0],[1,0,2,0,0],[0,0,1,0,1]]},
-{m:[[1,0,0,0,0],[0,2,1,1,0],[0,0,0,1,0],[1,1,0,0,0]]},
-{m:[[0,0,0,0,0,0],[0,1,1,1,1,0],[2,0,0,0,1,0],[0,1,1,0,0,0]]},
-
-{m:[[1,0,0,0,0,1],[0,1,1,1,1,0],[0,1,2,0,1,0],[0,1,0,0,1,0]]},
-{m:[[2,0,1,0,1,0],[0,0,0,0,0,0],[1,1,1,1,1,0]]},
-{m:[[0,0,0,1,0,0],[0,1,0,0,0,1],[0,0,2,1,0,0],[1,0,0,0,0,0]]},
-{m:[[0,1,1,1,1],[0,0,0,1,0],[1,1,2,1,0],[0,0,0,0,0]]},
-{m:[[2,0,0,0,0,0,0],[0,1,1,1,1,1,0],[0,0,0,0,0,0,0],[1,1,1,1,1,1,0]]}
+{best:4,m:[[2,0],[1,0]]},
+{best:6,m:[[2,0,0],[0,1,0],[0,0,0]]},
+{best:9,m:[[0,0,2],[1,1,0],[0,0,0]]}
 ];
 
 //////////////////////////////////////////////////
@@ -80,106 +90,22 @@ const LEVELS=[
 //////////////////////////////////////////////////
 
 function init(){
-grid=LEVELS[lvl-1].m.map(r=>[...r]);
-catPath=[];history=[];
+grid=LEVELS[level-1].m.map(r=>[...r]);
+catPath=[];
+history=[];
+moveCount=0;
 
 for(let y=0;y<grid.length;y++)
 for(let x=0;x<grid[0].length;x++)
 if(grid[y][x]==2){
-catPath.push({x,y});
+catPath=[{x,y}];
 grid[y][x]=3;
 }
 
-TILE=Math.min(70,500/grid.length);
 canvas.width=grid[0].length*TILE;
 canvas.height=grid.length*TILE;
 
-document.getElementById("lvl").innerText=lvl;
-draw();
-}
-
-//////////////////////////////////////////////////
-// Flood Fill 檢查死局（核心改良）
-//////////////////////////////////////////////////
-
-function reachableCount(start){
-let stack=[start];
-let visited=new Set([start.x+","+start.y]);
-let count=0;
-
-while(stack.length){
-let p=stack.pop();
-count++;
-
-[[1,0],[-1,0],[0,1],[0,-1]].forEach(d=>{
-let nx=p.x+d[0],ny=p.y+d[1];
-let key=nx+","+ny;
-if(grid[ny]?.[nx]===0&&!visited.has(key)){
-visited.add(key);
-stack.push({x:nx,y:ny});
-}
-});
-}
-return count;
-}
-
-//////////////////////////////////////////////////
-// 移動
-//////////////////////////////////////////////////
-
-function move(dx,dy){
-
-saveHistory();
-
-let head=catPath.at(-1);
-
-while(true){
-let nx=head.x+dx;
-let ny=head.y+dy;
-
-if(grid[ny]?.[nx]!==0)break;
-
-grid[ny][nx]=3;
-catPath.push({x:nx,y:ny});
-head={x:nx,y:ny};
-
-if(!isSafe()) {
-undo();
-return;
-}
-}
-
-draw();
-checkWin();
-}
-
-function isSafe(){
-let empty=[];
-for(let y=0;y<grid.length;y++)
-for(let x=0;x<grid[0].length;x++)
-if(grid[y][x]==0) empty.push({x,y});
-
-if(!empty.length) return true;
-
-return reachableCount(empty[0])===empty.length;
-}
-
-//////////////////////////////////////////////////
-// Undo
-//////////////////////////////////////////////////
-
-function saveHistory(){
-history.push({
-grid:grid.map(r=>[...r]),
-path:catPath.map(p=>({...p}))
-});
-}
-
-function undo(){
-let h=history.pop();
-if(!h)return;
-grid=h.grid;
-catPath=h.path;
+document.getElementById("lvl").innerText=level;
 draw();
 }
 
@@ -196,21 +122,84 @@ ctx.strokeStyle="#eee";
 ctx.strokeRect(x*TILE,y*TILE,TILE,TILE);
 
 if(cell==1){
-ctx.font=(TILE*.7)+"px Arial";
-ctx.fillText("📦",x*TILE+10,y*TILE+TILE*.8);
+ctx.font="40px Arial";
+ctx.fillText("📦",x*TILE+15,y*TILE+50);
 }
 });
 });
 
 catPath.forEach((p,i)=>{
-ctx.font=(TILE*.45)+"px Arial";
-if(i<catPath.length-1)
-ctx.fillText("🐾",p.x*TILE+15,p.y*TILE+TILE*.7);
+if(i<catPath.length-1){
+ctx.font="25px Arial";
+ctx.fillText("🐾",p.x*TILE+20,p.y*TILE+50);
+}
 });
 
 let head=catPath.at(-1);
-ctx.font=(TILE*.8)+"px Arial";
-ctx.fillText("🐱",head.x*TILE+5,head.y*TILE+TILE*.85);
+ctx.font="48px Arial";
+ctx.fillText("🐱",head.x*TILE+10,head.y*TILE+55);
+}
+
+//////////////////////////////////////////////////
+// Undo
+//////////////////////////////////////////////////
+
+function save(){
+history.push({
+grid:grid.map(r=>[...r]),
+path:catPath.map(p=>({...p})),
+moves:moveCount
+});
+}
+
+function undo(){
+let h=history.pop();
+if(!h)return;
+grid=h.grid;
+catPath=h.path;
+moveCount=h.moves;
+beep(220,.08);
+draw();
+}
+
+//////////////////////////////////////////////////
+// 移動
+//////////////////////////////////////////////////
+
+function move(dx,dy){
+
+if(editorMode)return;
+
+save();
+moveCount++;
+beep(500,.05);
+
+let head=catPath.at(-1);
+
+while(true){
+let nx=head.x+dx;
+let ny=head.y+dy;
+
+if(grid[ny]?.[nx]!==0)break;
+
+grid[ny][nx]=3;
+catPath.push({x:nx,y:ny});
+head={x:nx,y:ny};
+}
+
+draw();
+checkWin();
+}
+
+//////////////////////////////////////////////////
+// 星級判定
+//////////////////////////////////////////////////
+
+function calcStars(){
+let best=LEVELS[level-1].best;
+if(moveCount<=best) return "⭐⭐⭐";
+if(moveCount<=best+2) return "⭐⭐";
+return "⭐";
 }
 
 //////////////////////////////////////////////////
@@ -220,29 +209,74 @@ ctx.fillText("🐱",head.x*TILE+5,head.y*TILE+TILE*.85);
 function checkWin(){
 if(grid.some(r=>r.includes(0)))return;
 
+beep(900,.2);
+
+document.getElementById("stars").innerText=calcStars();
+
 setTimeout(()=>{
-lvl++;
-if(lvl>20){
-alert("🎉 Longcat 完全制霸！");
-lvl=1;
+level++;
+if(level>LEVELS.length){
+alert("🐱 Longcat PRO 全破！");
+level=1;
 }
 init();
-},250);
+},600);
 }
 
 //////////////////////////////////////////////////
-// 控制
+// 編輯器模式
+//////////////////////////////////////////////////
+
+canvas.addEventListener("click",e=>{
+if(!editorMode)return;
+
+const rect=canvas.getBoundingClientRect();
+let x=Math.floor((e.clientX-rect.left)/TILE);
+let y=Math.floor((e.clientY-rect.top)/TILE);
+
+grid[y][x]=(grid[y][x]+1)%3;
+draw();
+});
+
+function toggleEditor(){
+editorMode=!editorMode;
+alert(editorMode?"進入編輯器":"離開編輯器");
+}
+
+//////////////////////////////////////////////////
+// 手機滑動
+//////////////////////////////////////////////////
+
+let sx=0,sy=0;
+
+canvas.addEventListener("touchstart",e=>{
+sx=e.touches[0].clientX;
+sy=e.touches[0].clientY;
+});
+
+canvas.addEventListener("touchend",e=>{
+let dx=e.changedTouches[0].clientX-sx;
+let dy=e.changedTouches[0].clientY-sy;
+
+if(Math.abs(dx)>Math.abs(dy))
+move(dx>0?1:-1,0);
+else
+move(0,dy>0?1:-1);
+});
+
+//////////////////////////////////////////////////
+// 鍵盤
 //////////////////////////////////////////////////
 
 window.addEventListener("keydown",e=>{
-if(e.key==="z"||e.key==="Z") undo();
+if(e.key==="z"||e.key==="Z")undo();
+if(e.key==="e"||e.key==="E")toggleEditor();
+
 if(e.key==="ArrowUp")move(0,-1);
 if(e.key==="ArrowDown")move(0,1);
 if(e.key==="ArrowLeft")move(-1,0);
 if(e.key==="ArrowRight")move(1,0);
 });
-
-function reset(){init();}
 
 init();
 </script>
