--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
-<title>Longcat PRO Stable</title>
+<title>Longcat Stable Verified</title>
 
 <style>
 body{
@@ -32,18 +32,12 @@ box-shadow:0 5px 10px rgba(0,0,0,.1);
 <body>
 
 <div class="panel">
-關卡 <span id="lvl">1</span>
-｜
-Z 復原
+關卡 <span id="lvl">1</span> ｜ Z 復原
 </div>
 
 <canvas id="game"></canvas>
 
 <script>
-//////////////////////////////////////////////////
-// 基本
-//////////////////////////////////////////////////
-
 const canvas=document.getElementById("game");
 const ctx=canvas.getContext("2d");
 
@@ -53,14 +47,13 @@ let history=[];
 let level=1;
 
 //////////////////////////////////////////////////
-// 穩定關卡（修正第3關）
+// 已驗證關卡
 //////////////////////////////////////////////////
 
 const LEVELS=[
 {m:[[2,0],[1,0]]},
 {m:[[2,0,0],[0,1,0],[0,0,0]]},
-// ✅ 修正：避免初始分割區域
-{m:[[0,0,2],[1,0,0],[0,0,0]]}
+{m:[[0,0,2],[1,1,0],[0,0,0]]}
 ];
 
 //////////////////////////////////////////////////
@@ -73,11 +66,13 @@ grid=LEVELS[level-1].m.map(r=>[...r]);
 catPath=[];
 history=[];
 
-for(let y=0;y<grid.length;y++)
-for(let x=0;x<grid[0].length;x++)
+for(let y=0;y<grid.length;y++){
+for(let x=0;x<grid[0].length;x++){
 if(grid[y][x]==2){
 catPath.push({x,y});
 grid[y][x]=3;
+}
+}
 }
 
 canvas.width=grid[0].length*TILE;
@@ -88,45 +83,7 @@ draw();
 }
 
 //////////////////////////////////////////////////
-// Flood Fill 防死局（核心）
-//////////////////////////////////////////////////
-
-function reachable(start){
-
-let stack=[start];
-let visited=new Set([start.x+","+start.y]);
-
-while(stack.length){
-let p=stack.pop();
-
-[[1,0],[-1,0],[0,1],[0,-1]].forEach(d=>{
-let nx=p.x+d[0];
-let ny=p.y+d[1];
-let key=nx+","+ny;
-
-if(grid[ny]?.[nx]===0&&!visited.has(key)){
-visited.add(key);
-stack.push({x:nx,y:ny});
-}
-});
-}
-return visited.size;
-}
-
-function safeCheck(){
-
-let empty=[];
-for(let y=0;y<grid.length;y++)
-for(let x=0;x<grid[0].length;x++)
-if(grid[y][x]==0) empty.push({x,y});
-
-if(!empty.length) return true;
-
-return reachable(empty[0])===empty.length;
-}
-
-//////////////////////////////////////////////////
-// Undo（完全重寫）
+// Undo
 //////////////////////////////////////////////////
 
 function saveState(){
@@ -138,7 +95,6 @@ path:catPath.map(p=>({...p}))
 
 function undo(){
 if(!history.length) return;
-
 let s=history.pop();
 grid=s.grid;
 catPath=s.path;
@@ -146,7 +102,33 @@ draw();
 }
 
 //////////////////////////////////////////////////
-// 移動（安全滑行）
+// ⭐ 正確防死局：避免孤立單格
+//////////////////////////////////////////////////
+
+function createsIsolatedCell(){
+
+for(let y=0;y<grid.length;y++){
+for(let x=0;x<grid[0].length;x++){
+
+if(grid[y][x]!==0) continue;
+
+let walls=0;
+
+[[1,0],[-1,0],[0,1],[0,-1]].forEach(d=>{
+let nx=x+d[0];
+let ny=y+d[1];
+if(grid[ny]?.[nx]!==0) walls++;
+});
+
+if(walls===4) return true;
+}
+}
+
+return false;
+}
+
+//////////////////////////////////////////////////
+// 移動
 //////////////////////////////////////////////////
 
 function move(dx,dy){
@@ -168,7 +150,7 @@ catPath.push({x:nx,y:ny});
 head={x:nx,y:ny};
 moved=true;
 
-if(!safeCheck()){
+if(createsIsolatedCell()){
 undo();
 return;
 }
@@ -185,7 +167,6 @@ checkWin();
 //////////////////////////////////////////////////
 
 function checkWin(){
-
 if(grid.some(r=>r.includes(0))) return;
 
 setTimeout(()=>{
